--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -33,8 +33,7 @@ docker-compose-plugin \
 
 # Prepare stage: Cache go modules.
 FROM base AS prepare
-RUN --mount=type=cache,target=/tmp/.buildx-cache \
-    --mount=type=cache,target=/go/pkg/mod \
+RUN --mount=type=cache,target=/go/pkg/mod \
     make prepare
 
 # Lint stage: Cache golangci-lint.
