--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,23 +78,23 @@ jobs:
         run: docker buildx build -f Dockerfile.build --target build --cache-from=type=gha --cache-to=type=gha,mode=max .
 
       - name: save golangci-lint cache
-        uses: actions/cache/save@v4
+        uses: actions/cache@v3
         with:
-          path: /root/.cache/golangci-lint
+          path: cache-golangci-lint
           key: ${{ runner.os }}-${{ hashFiles('.go-builder/.golangci.yml') }}-${{ github.sha }}
         if: github.ref == 'refs/heads/main'
 
       - name: save go mod cache
-        uses: actions/cache/save@v4
+        uses: actions/cache@v3
         with:
-          path: /go/pkg/mod
+          path: go-pkg-mod
           key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}-${{ github.sha }}
         if: github.ref == 'refs/heads/main'
 
       - name: save go build cache
-        uses: actions/cache/save@v4
+        uses: actions/cache@v3
         with:
-          path: /root/.cache/go-build
+          path: cache-go-build
           key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}-${{ github.sha }}
         if: github.ref == 'refs/heads/main'
 
