--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           images: cache-test
 
-      - name: restore golangci-lint cache
+      - name: golangci-lint cache
         uses: actions/cache@v4
         id: golangci-lint-cache-restore
         with:
@@ -31,7 +31,7 @@ jobs:
             ${{ runner.os }}-${{ hashFiles('.go-builder/.golangci.yml') }}-
             ${{ runner.os }}-
 
-      - name: restore go mod cache
+      - name: go mod cache
         uses: actions/cache@v4
         id: go-mod-cache-restore
         with:
@@ -41,7 +41,7 @@ jobs:
             ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}-
             ${{ runner.os }}-go-mod-
 
-      - name: restore go build cache
+      - name: go build cache
         uses: actions/cache@v4
         id: go-build-cache-restore
         with:
@@ -76,6 +76,9 @@ jobs:
 
       - name: build
         run: docker buildx build -f Dockerfile.build --target build --cache-from=type=gha --cache-to=type=gha,mode=max .
+
+      - name: copy binary
+        run: docker cp $(docker create cache-test-build):/usr/local/bin/cache-test build/container/cache-test-linux-amd64
 
       - name: release
         if: github.ref == 'refs/heads/main'
