--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,19 +75,11 @@ jobs:
         run: docker buildx build -f Dockerfile.build --target sanity-check --cache-from=type=gha --cache-to=type=gha,mode=max .
 
       - name: build
-        run: docker buildx build -f Dockerfile.build --target build --cache-from=type=gha --cache-to=type=gha,mode=max .
+        run: docker buildx build -f Dockerfile.build --target build --cache-from=type=gha --cache-to=type=gha,mode=max --load .
 
       - name: copy binary
         run: docker cp $(docker create cache-test-build):/usr/local/bin/cache-test build/container/cache-test-linux-amd64
 
       - name: release
         if: github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          file: build/container/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+        run: make release
