--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -47,4 +47,8 @@ RUN --mount=type=cache,target=/go/pkg/mod \
 FROM prepare AS build
 RUN --mount=type=cache,target=/go/pkg/mod \
     --mount=type=cache,target=/root/.cache/go-build \
-    make go-build \
+    make go-build
+
+# Fix the permissions
+RUN chown -R $(id -u):$(id -g) go-pkg-mod \
+    && chmod -R u+rw go-pkg-mod
