--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,6 @@ jobs:
       - name: build
         run: docker buildx bake --file docker-compose-cache.json build
 
-#     - name: release
-#       if: github.ref == 'refs/heads/main'
-#       run: make release
+      - name: release
+        if: github.ref == 'refs/heads/main'
+        run: docker buildx bake --file docker-compose-cache.json release
