--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -45,3 +45,8 @@ FROM prepare AS build
 RUN --mount=type=cache,target=/go/pkg/mod \
     --mount=type=cache,target=/root/.cache/go-build \
     make go-build
+
+# Release stage: Copy binary from build stage.
+FROM gcr.io/distroless/static@sha256:c6d5981545ce1406d33e61434c61e9452dad93ecd8397c41e89036ef977a88f4 AS release
+COPY --from=build build/container/cache-test-linux-amd64 /usr/local/bin/cache-test
+CMD ["cache-test"]
