--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -48,5 +48,4 @@ RUN --mount=type=cache,target=/go/pkg/mod \
 
 # Release stage: Copy binary from build stage.
 FROM gcr.io/distroless/static@sha256:c6d5981545ce1406d33e61434c61e9452dad93ecd8397c41e89036ef977a88f4 AS release
-COPY --from=build build/container/cache-test-linux-amd64 /usr/local/bin/cache-test
-CMD ["cache-test"]
+COPY --from=build /go/src/github.com/lopezator/cache-test/build/container/cache-test-linux-amd64 /usr/local/bin/cache-test
