--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,9 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
+      - name: base
+        run: docker buildx bake --file docker-compose-cache.json base
+
       - name: prepare
         run: docker buildx bake --file docker-compose-cache.json prepare
 
