no bake file arg needed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,22 +60,20 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: base
-        run: docker buildx bake --file docker-compose-cache.json base
+        run: docker buildx bake base
 
       - name: prepare
-        run: docker buildx bake --file docker-compose-cache.json prepare
+        run: docker buildx bake prepare
 
       - name: sanity-check
-        run: docker buildx bake --file docker-compose-cache.json sanity-check
+        run: docker buildx bake sanity-check
 
       - name: build
         run: |
-          make APP=${{ env.APP }} VERSION_NOPREFIX=${{ env.VERSION_NOPREFIX }}
-          docker buildx bake --file docker-compose-cache.json build
+          docker buildx bake build
 
-      - name: release
+      - name: runtime
         if: github.ref == 'refs/heads/main'
         run: |
-          docker buildx bake --file docker-compose-cache.json runtime
-          make PREFIX=${{ env.PREFIX }} NAME=${{ env.NAME }} VERSION=${{ env.VERSION }}
-          docker push ${{ env.PREFIX }}/${{ env.NAME }}:${{ env.VERSION }}
+          docker buildx bake runtime
+          docker push docker.io/lopezator/cache-test:latest
