--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -33,6 +33,6 @@ RUN LATEST_BIN=$(ls -t /go/src/github.com/lopezator/cache-test/bin/*linux-amd64 
     chmod 0755 ${LATEST_BIN} && \
     cp ${LATEST_BIN} /usr/local/bin/cache-test
 
-# Runtime stage: Copy binary from build stage.
+# Release stage: Copy binary from build stage.
 FROM gcr.io/distroless/static@sha256:c6d5981545ce1406d33e61434c61e9452dad93ecd8397c41e89036ef977a88f4 AS release
 CMD ["cache-test"]
