--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,36 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      CACHE: invalidate-cache-18
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
+      - uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: cache-test
+
+      - name: golangci-lint cache
+        uses: actions/cache@v4
+        id: golangci-lint-cache-restore
+        with:
+          path: cache-golangci-lint
+          key: ${{ runner.os }}-${{ hashFiles('.go-builder/.golangci.yml') }}-main
+
+      - name: go mod cache
+        uses: actions/cache@v4
+        id: go-mod-cache-restore
+        with:
+          path: go-pkg-mod
+          key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}-main
+
+      - name: go build cache
+        uses: actions/cache@v4
+        id: go-build-cache-restore
+        with:
+          path: cache-go-build
+          key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}-main
 
       - name: docker login
         uses: docker/login-action@v3
