--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      CACHE: invalidate-cache-18
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -20,6 +18,38 @@ jobs:
         id: meta
         with:
           images: cache-test
+
+      - name: restore golangci-lint cache
+        uses: actions/cache@v4
+        id: golangci-lint-cache-restore
+        with:
+          path: cache-golangci-lint
+          key: ${{ runner.os }}-${{ hashFiles('.golangci.yml') }}-main
+
+      - name: restore go mod cache
+        uses: actions/cache@v4
+        id: go-mod-cache-restore
+        with:
+          path: go-pkg-mod
+          key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}-main
+
+      - name: restore go build cache
+        uses: actions/cache@v4
+        id: go-build-cache-restore
+        with:
+          path: cache-go-build
+          key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}-main
+
+      - name: inject cache into docker
+        uses: reproducible-containers/buildkit-cache-dance@v3.1.2
+        with:
+          cache-map: |
+            {
+              "cache-golangci-lint": "/root/.cache/golangci-lint",
+              "go-pkg-mod": "/go/pkg/mod",
+              "cache-go-build": "/root/.cache/go-build"
+            }
+          skip-extraction: ${{ steps.cache.outputs.cache-hit }}
 
       - name: docker login
         uses: docker/login-action@v3
