--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,38 +19,6 @@ jobs:
         with:
           images: cache-test
 
-      - name: restore golangci-lint cache
-        uses: actions/cache@v4
-        id: golangci-lint-cache-restore
-        with:
-          path: cache-golangci-lint
-          key: ${{ runner.os }}-${{ hashFiles('.golangci.yml') }}-main
-
-      - name: restore go mod cache
-        uses: actions/cache@v4
-        id: go-mod-cache-restore
-        with:
-          path: go-pkg-mod
-          key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}-main
-
-      - name: restore go build cache
-        uses: actions/cache@v4
-        id: go-build-cache-restore
-        with:
-          path: cache-go-build
-          key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}-main
-
-      - name: inject cache into docker
-        uses: reproducible-containers/buildkit-cache-dance@v3.1.2
-        with:
-          cache-map: |
-            {
-              "cache-golangci-lint": "/root/.cache/golangci-lint",
-              "go-pkg-mod": "/go/pkg/mod",
-              "cache-go-build": "/root/.cache/go-build"
-            }
-          skip-extraction: ${{ steps.cache.outputs.cache-hit }}
-
       - name: docker login
         uses: docker/login-action@v3
         with:
@@ -58,11 +26,10 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: build image
-        if: github.ref == 'refs/heads/main'
         uses: docker/bake-action@v5
         with:
           targets: build
-          push: true
+          push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: release image
         if: github.ref == 'refs/heads/main'
