--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,26 +19,26 @@ jobs:
         with:
           images: cache-test
 
-      - name: restore golangci-lint cache
+      - name: golangci-lint cache
         uses: actions/cache@v4
         id: golangci-lint-cache-restore
         with:
           path: cache-golangci-lint
           key: ${{ runner.os }}-golangci-lint-${{ hashFiles('.golangci.yml') }}-main
 
-      - name: restore go mod cache
+      - name: go mod cache
         uses: actions/cache@v4
         id: go-mod-cache-restore
         with:
           path: go-pkg-mod
           key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}-main
 
-      - name: restore go build cache
+      - name: go build cache
         uses: actions/cache@v4
         id: go-build-cache-restore
         with:
           path: cache-go-build
-          key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}-main
+          key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum', '**/go.mod') }}-main
 
       - name: inject cache into docker
         uses: reproducible-containers/buildkit-cache-dance@v3.1.2
